Copy config data from old repo into `mapping.yaml`

--- a/package.xml
+++ b/package.xml
@@ -11,6 +11,7 @@
 
   <depend>rclcpp</depend>
   <depend>rclpy</depend>
+  <depend>slam_toolbox</depend>
   <depend>std_msgs</depend>
   <depend>sensor_msgs</depend>
   <depend>cv_bridge</depend>
