Add nav_driver params file

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -49,4 +49,14 @@ launch
 DESTINATION share/${PROJECT_NAME}/
 )
 
+install(DIRECTORY
+  config
+  DESTINATION share/${PROJECT_NAME}/
+)
+
+install(DIRECTORY
+  model
+  DESTINATION share/${PROJECT_NAME}/
+)
+
 ament_package()
