Add `nav_driver` node

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,6 +23,8 @@ ament_target_dependencies(sub rclcpp std_msgs)
 add_executable(test_image_node src/image_test_node.cpp)
 ament_target_dependencies(test_image_node rclcpp sensor_msgs cv_bridge OpenCV)
 
+add_executable(nav_driver src/nav_driver.cpp)
+ament_target_dependencies(nav_driver rclcpp)
 
 if(BUILD_TESTING)
   find_package(ament_lint_auto REQUIRED)
@@ -36,11 +38,11 @@ if(BUILD_TESTING)
   ament_lint_auto_find_test_dependencies()
 endif()
 
-
 install(TARGETS
   pub
   sub
   test_image_node
+  nav_driver
   DESTINATION lib/${PROJECT_NAME})
 
 # Install launch files.
