Make world files visible through Seeing-Eye

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -70,4 +70,9 @@ install(DIRECTORY
   DESTINATION share/${PROJECT_NAME}/
 )
 
+install(DIRECTORY
+  world
+  DESTINATION share/${PROJECT_NAME}/
+)
+
 ament_package()
