--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -45,7 +45,6 @@ if(BUILD_TESTING)
   ament_lint_auto_find_test_dependencies()
 endif()
 
-
 install(TARGETS
   pub
   sub
@@ -68,6 +67,11 @@ DESTINATION share/${PROJECT_NAME}/
 
 install(DIRECTORY
   config
+  DESTINATION share/${PROJECT_NAME}/
+)
+
+install(DIRECTORY
+  world
   DESTINATION share/${PROJECT_NAME}/
 )
 
