--- a/config/rotate_image.yaml
+++ b/config/rotate_image.yaml
@@ -1,5 +1,6 @@
 /ImageRotateNode:
   ros__parameters:
     use_camera_info: false
+    target_x: -5.0
 
 # ros2 run image_rotate image_rotate --ros-args --remap image:=/camera/color/image_raw --params-file ./rotate_image.yaml
