--- a/config/rplidar_mod.yaml
+++ b/config/rplidar_mod.yaml
@@ -1,21 +1,35 @@
 laser_filter:
   ros__parameters:
-    scan_filter_chain:
-      shadows:
-        type: laser_filters/ScanShadowsFilter
-        params:
-          min_angle: 10
-          max_angle: 170
-          neighbors: 20
-          window: 1
-      range:
-        type: laser_filters/LaserScanRangeFilter
-        params:
-          use_message_range_limits: false
-          upper_threshold: .inf
-          upper_replacement_value: .inf
-      angle:
-        type: laser_filters/LaserScanAngularBoundsFilterInPlace
-        params:
-          lower_angle: -1.47
-          upper_angle: 1.47
+    filter1:
+      name: shadows
+      type: laser_filters/ScanShadowsFilter
+      params:
+        min_angle: 10.0
+        max_angle: 170.0
+        neighbors: 20
+        window: 1
+    filter2:
+      name: speckle_filter
+      type: laser_filters/LaserScanSpeckleFilter
+      params:
+        filter_type: 1
+        max_range: 2.0
+        max_range_difference: 0.1
+        filter_window: 4
+    filter3:
+      name: box
+      type: laser_filters/LaserScanBoxFilter
+      params:
+        box_frame: laser
+        min_x: -0.1
+        max_x: 0.3
+        min_y: -0.3
+        max_y: 0.2
+        min_z: -0.1
+        max_z: 0.1
+    filter4:
+      name: angle
+      type: laser_filters/LaserScanAngularBoundsFilterInPlace
+      params:
+        lower_angle: -1.34
+        upper_angle: -0.78
